20100210
 - (djm) add -lselinux to LIBS before calling AC_CHECK_FUNCS for
   getseuserbyname; patch from calebcase AT gmail.com via
   cjwatson AT debian.org

20100202
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2010/01/30 21:08:33
     [sshd.8]
     debug output goes to stderr, not "the system log"; ok markus dtucker
   - djm@cvs.openbsd.org 2010/01/30 21:12:08
     [channels.c]
     fake local addr:port when stdio fowarding as some servers (Tectia at
     least) validate that they are well-formed;
     reported by imorgan AT nas.nasa.gov
     ok dtucker

20100130
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2010/01/28 00:21:18
     [clientloop.c]
     downgrade an error() to a debug() - this particular case can be hit in
     normal operation for certain sequences of mux slave vs session closure
     and is harmless
   - djm@cvs.openbsd.org 2010/01/29 00:20:41
     [sshd.c]
     set FD_CLOEXEC on sock_in/sock_out; bz#1706 from jchadima AT redhat.com
     ok dtucker@
   - djm@cvs.openbsd.org 2010/01/29 20:16:17
     [mux.c]
     kill correct channel (was killing already-dead mux channel, not
     its session channel)
   - djm@cvs.openbsd.org 2010/01/30 02:54:53
     [mux.c]
     don't mark channel as read failed if it is already closing; suppresses
     harmless error messages when connecting to SSH.COM Tectia server
     report by imorgan AT nas.nasa.gov

20100129
 - (dtucker) [openbsd-compat/openssl-compat.c] Bug #1707: Call OPENSSL_config()
   after registering the hardware engines, which causes the openssl.cnf file to
   be processed.  See OpenSSL's man page for OPENSSL_config(3) for details.
   Patch from Solomon Peachy, ok djm@.

20100128
 - (djm) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2010/01/26 02:15:20
     [mux.c]
     -Wuninitialized and remove a // comment; from portable
     (Id sync only)
   - djm@cvs.openbsd.org 2010/01/27 13:26:17
     [mux.c]
     fix bug introduced in mux rewrite:
     